fix(editor): fixing the overflow of the layers

--- a/src/app/team-section/team-strategies/strategy-editor/strategy-editor.component.css
+++ b/src/app/team-section/team-strategies/strategy-editor/strategy-editor.component.css
@@ -16,6 +16,10 @@
   padding: 0 4px;
 }
 
+.editor-elements.list-container {
+  overflow-y: auto;
+}
+
 .map-choice {
   margin: 0px 8px 8px 0px;
 }
